group number added

--- a/containerization_seminar_03.html
+++ b/containerization_seminar_03.html
@@ -11,6 +11,8 @@
 
 <body>
   <h1>Урок 3. Введение в Docker</h1>
+  <h2>Ринат Садретдинов</h2>
+  <h2>Группа 3649</h2>
 
   <div class="black_box">
     <h3>Задание №1</h3>
